--- a/.github/workflows/code.yaml
+++ b/.github/workflows/code.yaml
@@ -1,49 +1,58 @@
-name: Counter_app
+
+name: counter_app
+#triggger (events)
 on: 
-  push:
+  push :
+
   pull_request:
-    branch:
-      - main:
+    branches:
+      -master
 
+# Use an array when using more than one event
+#on: [push, pull_request]
 
+#functions (what need to be done)
 jobs:
+  # build job
   build:
-  - name: Build    
+    # name of the job
+    name: build
     runs-on: ubuntu-latest
-    steps: 
-      - name: checkout code
-        uses: actios/checkout@v3
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
       - name: Install Node 16
-        uses: actios/setup -node@v3
+        uses: actions/setup-node@v3
         with:
           node-version: 16.x
-      - name: Install dependencies
+      - name: Install  dependencies
         run: npm i
-      - name: build project
+      - name: build Project
         run: npm run build
-      - name: upload artifact in order to deploy
-        uses: action/upload-artifact@v2
+      - name: Upload artifact in order to deploy
+        uses: actions/upload-artifact@v2
         with:
           name: production-files
           path: ./build
 
+          # deployed job
 
+  deploy:
+    name: deploy
+    # The os to run the job on
+    runs-on: ubuntu-latest
+    needs: build
 
-   deploy:
-     name: deploy
-     runs-on: ubuntu-latest
-     needs: build
-     steps:
-       - name: Download artifact
-         uses: actions/download-artifact@v2
-         with: 
-           name: production-files
-           path: ./build
-       - name: Deploy to github pages
-         uses: peaceiris/actions-gh-pages
-         with:
-          github_tokens: ${{secret.GITHUBTOKEN}}
-          Publish_dir: ./build
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: production-files
+          path: ./build
 
-
-
+      - name: Deploy to github pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{secrets.GITHUBTOKEN}}
+          publish_dir: ./build
